js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-import-call-unknown.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
